--- a/inst/Rmd/isoMS_report.Rmd
+++ b/inst/Rmd/isoMS_report.Rmd
@@ -18,56 +18,6 @@ require(knitr)
 
 ```
 
-```{r anyAA, echo=FALSE, message=FALSE, warning=FALSE}
-mass_tol <- 1e-4
-if(is.na(group))
-  group='group'
-if(!(group  %in% names(data))){
-  data <- data %>% mutate(group="group")
-}else{
-  data <- data %>% mutate_(group=sprintf("`%s`", group))
-}
-data %>% 
-  filter(abs(masserror)<mass_tol) %>% 
-  group_by(group, seqNum, rt) %>%
-  do({
-    dd <- .
-    res <- data.frame()
-    elements <- setdiff(unique(dd$peak), '0')
-    for(el in elements){
-      good_aa <- (dd %>% filter(peak==el & I >0) %>% distinct(ion))$ion
-      i0s <- (dd %>% filter(ion %in% good_aa & peak=='0'))$I
-      i1s <- (dd %>% filter(ion %in% good_aa & peak==el))$I
-      ns <- (dd %>% filter(ion %in% good_aa & peak==el))$n
-
-            rs <- i1s/i0s
-      i0s <- i0s[rs<1]
-      i1s <- i1s[rs<1]
-      ns <- ns[rs<1]
-      rs <- rs[rs<1]
-      rs_good <- (abs(rs-median(rs))<1.5*mad(rs))
-      r <- sum(i1s[rs_good]/ns[rs_good])/sum(i0s[rs_good])
-      if(!is.na(r))
-        res <- res %>% bind_rows(data.frame(peak=el, gamma=r, logI = log2(sum(i1s))))
-    }
-    if(nrow(res)>0){
-      res$seqNum = dd$seqNum[[1]]
-      res$rt = dd$rt[[1]]
-      res$ion = 'any'
-    }
-    res
-  }) %>% ungroup() -> any_aa
-data %>%
-  filter(abs(masserror)<mass_tol) %>% 
-  filter(n>0 & I>0) %>% 
-  mutate(gamma=isoratio/n, logI=log2(I)) %>% 
-  select(group,peak, gamma, logI, seqNum, rt, ion) %>% 
-  bind_rows(any_aa) %>% ungroup() -> all_aa
-
-gg <- all_aa %>% distinct(group)
-
-
-```
 
 ## Carbon: $$^{13}C/^{12}C$$
 
@@ -86,9 +36,10 @@ aa_data <- all_aa %>%
   left_join(mmad, by='ion') %>% 
   filter(gamma>(m-3*md) & gamma < (m+3*md)) %>% 
   filter(gamma>vmin & gamma < vmax)
+aa_data$ion <- factor(aa_data$ion, levels = (mmad %>% arrange(md))$ion)
 aa_data %>% 
-  ggplot(aes(x=rt/60, y=gamma, color=group)) + 
-    geom_point(size=0.1, alpha=0.2) + geom_smooth() +
+  ggplot(aes(x=rt/60, y=gamma, color=file)) + 
+    geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
     theme_bw() + 
     facet_grid(.~ion) + 
     theme(legend.position = "",axis.text.x = element_text(angle = 90, hjust = 1))+ 
@@ -96,7 +47,7 @@ aa_data %>%
     ylab(bquote(''^13*'C'/''^12*'C')) -> g_rt
 
 aa_data %>%
-  ggplot(aes(x=logI, y=gamma, color=group)) + 
+  ggplot(aes(x=logI, y=gamma, color=file)) + 
     geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
     theme_bw() + 
     facet_grid(ion~.) + 
@@ -105,17 +56,18 @@ aa_data %>%
     xlab('logI, a.u.') +
     ylab(bquote(''^13*'C'/''^12*'C')) -> g_logI
 aa_data %>% 
-  ggplot(aes(x=ion, y=gamma, fill=group)) + geom_boxplot( outlier.color = NA, notch=T)  +
+  ggplot(aes(x=ion, y=gamma, fill=file)) + geom_boxplot( outlier.color = NA, notch=T)  +
   theme_bw() +
   ylab(bquote(''^13*'C'/''^12*'C')) + xlab("") -> g_bp
 aa_data %>% 
-  ggplot(aes(x=ion, y=gamma, fill=group)) + geom_violin( outlier.color = NA, draw_quantiles = c(0.25, 0.5, 0.75))  +
+  ggplot(aes(x=ion, y=gamma, fill=file)) + geom_violin( outlier.color = NA, draw_quantiles = c(0.25, 0.5, 0.75))  +
   theme_bw() +
   ylab(bquote(''^13*'C'/''^12*'C')) + xlab("") -> g_violin
 aa_data %>% 
-  ggplot(aes(x=gamma, fill=group)) + geom_density(alpha=0.3)  +
+  filter(ion=='any') %>% 
+  ggplot(aes(x=gamma, fill=file)) + geom_density(alpha=0.3)  +
   theme_bw() +
-  xlab(bquote(''^13*'C'/''^12*'C')) + xlab("density") -> g_density
+  xlab(bquote(''^13*'C'/''^12*'C')) + ylab("density") -> g_density
 
 #grid.arrange(g_rt, g_logI, g_bp, g_density, ncol=1)
 
@@ -123,10 +75,15 @@ print(g_rt)
 print(g_logI)
 print(g_bp)
 print(g_density)
+```
+
+### File summaries
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 
 aa_data %>% 
-  group_by(group, ion) %>% 
-  summarize(mean=mean(gamma)*100, median=median(gamma)*100, wmean = weighted.mean(gamma, logI)*100, sd = sd(gamma)*100, se = sd(gamma)/n()*100, n=n()) %>% 
+  group_by(ion, group,file) %>% 
+  summarize(mean=mean(gamma)*100, median=median(gamma)*100, wmean = weighted.mean(gamma, logI)*100, sd = sd(gamma)*100, se = sd(gamma)/sqrt(n())*100, n=n()) %>% 
   arrange(ion) -> res_group
 tlist <- list()
 for(aa in unique(res_group$ion)){
@@ -157,6 +114,44 @@ for(aa in unique(res_group$ion)){
     )
 }
 htmltools::tagList(tlist)
+```
+
+### Group summaries
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+
+res_group %>%
+  summarize(gmean=mean(mean), gmedian=mean(median), gwmean=mean(wmean), sd_mean=sd(mean), sd_median=sd(median), sd_wmean=sd(wmean), n=n()) %>%
+  mutate(
+    cv_mean = sd_mean/gmean/sqrt(n)*100,
+    cv_median = sd_median/gmedian/sqrt(n)*100,
+    cv_wmean = sd_wmean/gwmean/sqrt(n)*100
+  ) -> res
+res %>% 
+    datatable() %>%  
+    formatSignif(c('gmean','gmedian','gwmean','sd_mean','sd_median','sd_wmean'), 6) %>%
+    formatSignif(c('cv_mean','cv_median','cv_wmean'), 2) %>%
+    formatStyle(
+      'gmean',
+      background = styleColorBar(res_group$mean, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    ) %>%
+    formatStyle(
+      'gmedian',
+      background = styleColorBar(res_group$median, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    ) %>%
+    formatStyle(
+      'gwmean',
+      background = styleColorBar(res_group$wmean, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    )
 ```
 
 ## Nitrogen: $$^{15}N/^{14}N$$
@@ -175,10 +170,11 @@ aa_data <- all_aa %>%
   left_join(mmad, by='ion') %>% 
   filter(gamma>(m-3*md) & gamma < (m+3*md)) %>% 
   filter(gamma>vmin & gamma < vmax)
+aa_data$ion <- factor(aa_data$ion, levels = (mmad %>% arrange(md))$ion)
 
 aa_data %>% 
-  ggplot(aes(x=rt/60, y=gamma, color=group)) + 
-    geom_point(size=0.1, alpha=0.2) + geom_smooth() +
+  ggplot(aes(x=rt/60, y=gamma, color=file)) + 
+    geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
     theme_bw() + 
     facet_grid(.~ion) + 
     theme(legend.position = "",axis.text.x = element_text(angle = 90, hjust = 1))+ 
@@ -186,8 +182,8 @@ aa_data %>%
     ylab(bquote(''^15*'N'/''^14*'N')) -> g_rt
 
 aa_data %>% 
-  ggplot(aes(x=logI, y=gamma, color=group)) + 
-    geom_point(size=0.1, alpha=0.2) + geom_smooth() +
+  ggplot(aes(x=logI, y=gamma, color=file)) + 
+    geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
     theme_bw() + 
     facet_grid(ion~.) + 
     theme(legend.position = "",axis.text.x = element_text(angle = 90, hjust = 1))+ 
@@ -196,13 +192,14 @@ aa_data %>%
     ylab(bquote(''^15*'N'/''^14*'N')) -> g_logI
 aa_data %>% 
   filter(gamma>vmin & gamma<vmax) %>% 
-  ggplot(aes(x=ion, y=gamma, fill=group)) + geom_boxplot( outlier.color = NA, notch=T)  +
+  ggplot(aes(x=ion, y=gamma, fill=file)) + geom_boxplot( outlier.color = NA, notch=T)  +
   theme_bw() +
   ylab(bquote(''^15*'N'/''^14*'N')) + xlab("") -> g_bp
 aa_data %>% 
-  ggplot(aes(x=gamma, fill=group)) + geom_density(alpha=0.3)  +
+  filter(ion=='any') %>% 
+  ggplot(aes(x=gamma, fill=file)) + geom_density(alpha=0.3)  +
   theme_bw() +
-  xlab(bquote(''^15*'N'/''^14*'N')) + xlab("density") -> g_density
+  xlab(bquote(''^15*'N'/''^14*'N')) + ylab("density") -> g_density
 
 #grid.arrange(g_rt, g_logI, g_bp, g_density, ncol=1)
 
@@ -210,10 +207,16 @@ print(g_rt)
 print(g_logI)
 print(g_bp)
 print(g_density)
+```
+
+
+### File summaries
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 
 aa_data %>% 
-  group_by(group, ion) %>% 
-  summarize(mean=mean(gamma)*100, median=median(gamma)*100, wmean = weighted.mean(gamma, logI)*100, sd = sd(gamma)*100, se = sd(gamma)/n()*100, n=n()) %>% 
+  group_by(ion, group,file) %>% 
+  summarize(mean=mean(gamma)*100, median=median(gamma)*100, wmean = weighted.mean(gamma, logI)*100, sd = sd(gamma)*100, se = sd(gamma)/sqrt(n())*100, n=n()) %>% 
   arrange(ion) -> res_group
 tlist <- list()
 for(aa in unique(res_group$ion)){
@@ -244,6 +247,44 @@ for(aa in unique(res_group$ion)){
     )
 }
 htmltools::tagList(tlist)
+```
+
+### Group summaries
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+
+res_group %>%
+  summarize(gmean=mean(mean), gmedian=mean(median), gwmean=mean(wmean), sd_mean=sd(mean), sd_median=sd(median), sd_wmean=sd(wmean), n=n()) %>%
+  mutate(
+    cv_mean = sd_mean/gmean/sqrt(n)*100,
+    cv_median = sd_median/gmedian/sqrt(n)*100,
+    cv_wmean = sd_wmean/gwmean/sqrt(n)*100
+  ) -> res
+res %>% 
+    datatable() %>%  
+    formatSignif(c('gmean','gmedian','gwmean','sd_mean','sd_median','sd_wmean'), 6) %>%
+    formatSignif(c('cv_mean','cv_median','cv_wmean'), 2) %>%
+    formatStyle(
+      'gmean',
+      background = styleColorBar(res_group$mean, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    ) %>%
+    formatStyle(
+      'gmedian',
+      background = styleColorBar(res_group$median, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    ) %>%
+    formatStyle(
+      'gwmean',
+      background = styleColorBar(res_group$wmean, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    )
 ```
 
 ## Hydrogen: $$^{2}H/^{1}H$$
@@ -262,9 +303,10 @@ aa_data <- all_aa %>%
   left_join(mmad, by='ion') %>% 
   filter(gamma>(m-3*md) & gamma < (m+3*md)) %>% 
   filter(gamma>vmin & gamma < vmax)
+aa_data$ion <- factor(aa_data$ion, levels = (mmad %>% arrange(md))$ion)
 aa_data %>% 
-  ggplot(aes(x=rt/60, y=gamma, color=group)) + 
-    geom_point(size=0.1, alpha=0.2) + geom_smooth() +
+  ggplot(aes(x=rt/60, y=gamma, color=file)) + 
+    geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
     theme_bw() + 
     facet_grid(.~ion) + 
     theme(legend.position = "",axis.text.x = element_text(angle = 90, hjust = 1))+ 
@@ -272,8 +314,8 @@ aa_data %>%
     ylab(bquote(''^2*'H'/''^1*'H')) -> g_rt
 
 aa_data %>% 
-  ggplot(aes(x=logI, y=gamma, color=group)) + 
-    geom_point(size=0.1, alpha=0.2) + geom_smooth() +
+  ggplot(aes(x=logI, y=gamma, color=file)) + 
+    geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
     theme_bw() + 
     facet_grid(ion~.) + 
     theme(legend.position = "",axis.text.x = element_text(angle = 90, hjust = 1))+ 
@@ -281,11 +323,12 @@ aa_data %>%
     xlab('logI, a.u.') +
     ylab(bquote(''^2*'H'/''^1*'H')) -> g_logI
 aa_data %>% 
-  ggplot(aes(x=ion, y=gamma, fill=group)) + geom_boxplot( outlier.color = NA, notch=T)  +
+  ggplot(aes(x=ion, y=gamma, fill=file)) + geom_boxplot( outlier.color = NA, notch=T)  +
   theme_bw() +
   ylab(bquote(''^2*'H'/''^1*'H')) + xlab("") -> g_bp
 aa_data %>% 
-  ggplot(aes(x=gamma, fill=group)) + geom_density(alpha=0.3)  +
+  filter(ion=='any') %>% 
+  ggplot(aes(x=gamma, fill=file)) + geom_density(alpha=0.3)  +
   theme_bw() +
   xlab(bquote(''^2*'H'/''^1*'H')) + xlab("density") -> g_density
 
@@ -295,10 +338,16 @@ print(g_rt)
 print(g_logI)
 print(g_bp)
 print(g_density)
+```
+
+
+### File summaries
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 
 aa_data %>% 
-  group_by(group, ion) %>% 
-  summarize(mean=mean(gamma)*100, median=median(gamma)*100, wmean = weighted.mean(gamma, logI)*100, sd = sd(gamma)*100, se = sd(gamma)/n()*100, n=n()) %>% 
+  group_by(ion, group,file) %>% 
+  summarize(mean=mean(gamma)*100, median=median(gamma)*100, wmean = weighted.mean(gamma, logI)*100, sd = sd(gamma)*100, se = sd(gamma)/sqrt(n())*100, n=n()) %>% 
   arrange(ion) -> res_group
 tlist <- list()
 for(aa in unique(res_group$ion)){
@@ -331,9 +380,48 @@ for(aa in unique(res_group$ion)){
 htmltools::tagList(tlist)
 ```
 
+### Group summaries
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+
+res_group %>%
+  summarize(gmean=mean(mean), gmedian=mean(median), gwmean=mean(wmean), sd_mean=sd(mean), sd_median=sd(median), sd_wmean=sd(wmean), n=n()) %>%
+  mutate(
+    cv_mean = sd_mean/gmean/sqrt(n)*100,
+    cv_median = sd_median/gmedian/sqrt(n)*100,
+    cv_wmean = sd_wmean/gwmean/sqrt(n)*100
+  ) -> res
+res %>% 
+    datatable() %>%  
+    formatSignif(c('gmean','gmedian','gwmean','sd_mean','sd_median','sd_wmean'), 6) %>%
+    formatSignif(c('cv_mean','cv_median','cv_wmean'), 2) %>%
+    formatStyle(
+      'gmean',
+      background = styleColorBar(res_group$mean, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    ) %>%
+    formatStyle(
+      'gmedian',
+      background = styleColorBar(res_group$median, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    ) %>%
+    formatStyle(
+      'gwmean',
+      background = styleColorBar(res_group$wmean, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    )
+```
+
 ## Oxygen: $$^{18}O/^{16}O$$
 
 ### Data overview
+
 ```{r 18O, echo=FALSE, message=FALSE, warning=FALSE}
 vals <- (all_aa %>% filter(peak=='18O'))$gamma
 vmin <- quantile(vals, 0.05)
@@ -347,9 +435,10 @@ aa_data <- all_aa %>%
   left_join(mmad, by='ion') %>% 
   filter(gamma>(m-3*md) & gamma < (m+3*md)) %>% 
   filter(gamma>vmin & gamma < vmax)
+aa_data$ion <- factor(aa_data$ion, levels = (mmad %>% arrange(md))$ion)
 aa_data %>% 
-  ggplot(aes(x=rt/60, y=gamma, color=group)) + 
-    geom_point(size=0.1, alpha=0.2) + geom_smooth() +
+  ggplot(aes(x=rt/60, y=gamma, color=file)) + 
+    geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
     theme_bw() + 
     facet_grid(.~ion) + 
     theme(legend.position = "",axis.text.x = element_text(angle = 90, hjust = 1))+ 
@@ -357,8 +446,8 @@ aa_data %>%
     ylab(bquote(''^18*'O'/''^16*'O')) -> g_rt
 
 aa_data %>% 
-  ggplot(aes(x=logI, y=gamma, color=group)) + 
-    geom_point(size=0.1, alpha=0.2) + geom_smooth() +
+  ggplot(aes(x=logI, y=gamma, color=file)) + 
+    geom_point(size=0.1, alpha=0.2) + #geom_smooth() +
     theme_bw() + 
     facet_grid(ion~.) + 
     theme(legend.position = "",axis.text.x = element_text(angle = 90, hjust = 1))+ 
@@ -366,11 +455,12 @@ aa_data %>%
     xlab('logI, a.u.') +
     ylab(bquote(''^18*'O'/''^16*'O')) -> g_logI
 aa_data %>% 
-  ggplot(aes(x=ion, y=gamma, fill=group)) + geom_boxplot( outlier.color = NA, notch=T)  +
+  ggplot(aes(x=ion, y=gamma, fill=file)) + geom_boxplot( outlier.color = NA, notch=T)  +
   theme_bw() +
   ylab(bquote(''^18*'O'/''^16*'O')) + xlab("") -> g_bp
 aa_data %>% 
-  ggplot(aes(x=gamma, fill=group)) + geom_density(alpha=0.3)  +
+  filter(ion=='any') %>% 
+  ggplot(aes(x=gamma, fill=file)) + geom_density(alpha=0.3)  +
   theme_bw() +
   xlab(bquote(''^18*'O'/''^16*'O')) + xlab("density") -> g_density
 
@@ -380,10 +470,16 @@ print(g_rt)
 print(g_logI)
 print(g_bp)
 print(g_density)
+```
+
+
+### File summaries
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 
 aa_data %>% 
-  group_by(group, ion) %>% 
-  summarize(mean=mean(gamma)*100, median=median(gamma)*100, wmean = weighted.mean(gamma, logI)*100, sd = sd(gamma)*100, se = sd(gamma)/n()*100, n=n()) %>% 
+  group_by(ion, group,file) %>% 
+  summarize(mean=mean(gamma)*100, median=median(gamma)*100, wmean = weighted.mean(gamma, logI)*100, sd = sd(gamma)*100, se = sd(gamma)/sqrt(n())*100, n=n()) %>% 
   arrange(ion) -> res_group
 tlist <- list()
 for(aa in unique(res_group$ion)){
@@ -414,5 +510,43 @@ for(aa in unique(res_group$ion)){
     )
 }
 htmltools::tagList(tlist)
+```
+
+### Group summaries
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+
+res_group %>%
+  summarize(gmean=mean(mean), gmedian=mean(median), gwmean=mean(wmean), sd_mean=sd(mean), sd_median=sd(median), sd_wmean=sd(wmean), n=n()) %>%
+  mutate(
+    cv_mean = sd_mean/gmean/sqrt(n)*100,
+    cv_median = sd_median/gmedian/sqrt(n)*100,
+    cv_wmean = sd_wmean/gwmean/sqrt(n)*100
+  ) -> res
+res %>% 
+    datatable() %>%  
+    formatSignif(c('gmean','gmedian','gwmean','sd_mean','sd_median','sd_wmean'), 6) %>%
+    formatSignif(c('cv_mean','cv_median','cv_wmean'), 2) %>%
+    formatStyle(
+      'gmean',
+      background = styleColorBar(res_group$mean, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    ) %>%
+    formatStyle(
+      'gmedian',
+      background = styleColorBar(res_group$median, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    ) %>%
+    formatStyle(
+      'gwmean',
+      background = styleColorBar(res_group$wmean, 'steelblue'),
+      backgroundSize = '100% 90%',
+      backgroundRepeat = 'no-repeat',
+      backgroundPosition = 'center'
+    )
 ```
 
