New fitting method added

--- a/inst/Rmd/isoMS_report2.Rmd
+++ b/inst/Rmd/isoMS_report2.Rmd
@@ -701,8 +701,7 @@ res_group %>%
 #       backgroundPosition = 'center'
 #     )
 # }
-# htmltools::tagList(tlist)
-}
+# htmltools::tagList(tlist)}
 ```
 
 ### Group summary
